--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -5,6 +5,7 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -83,12 +84,20 @@
                                 <Font size="16.0" />
                             </font>
                         </Button>
-                        <Button fx:id="dispositivos_btn" layoutX="40.0" layoutY="485.0" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" text="Dispositivos" textFill="WHITE">
+                        <Button fx:id="dispositivos_btn" layoutX="40.0" layoutY="483.0" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" text="Dispositivos" textFill="WHITE">
                             <graphic>
                                 <FontAwesomeIconView fill="WHITE" glyphName="MOBILE" size="1.2em" />
                             </graphic>
                             <font>
                                 <Font size="16" />
+                            </font>
+                        </Button>
+                        <Button fx:id="blueprint_btn" layoutX="40.0" layoutY="526.0" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" text="Mapeamentos" textFill="WHITE">
+                            <graphic>
+                                <FontAwesomeIconView fill="WHITE" glyphName="LINK" size="1.2em" />
+                            </graphic>
+                            <font>
+                                <Font size="16.0" />
                             </font>
                         </Button>
                         <Button fx:id="signout_btn" layoutX="39.0" layoutY="614.0" mnemonicParsing="false" onAction="#signOut" prefHeight="38.0" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="Sair" textFill="WHITE">
@@ -474,9 +483,9 @@
                                         <!-- ─────────── 2ª linha ───────────-->
                                         <Label text="Tempo de espaçamento" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                                         <HBox spacing="6" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <children>
-                                              <Spinner fx:id="tmpSpinner" prefWidth="150" />
-                                 </children>
+                                            <children>
+                                                <Spinner fx:id="tmpSpinner" prefWidth="150" />
+                                            </children>
                                         </HBox>
 
                                         <Label text="Quantidade:*" GridPane.columnIndex="2" GridPane.rowIndex="1" />
@@ -510,12 +519,12 @@
                                                 <Button fx:id="btnRemVar" alignment="CENTER_RIGHT" onAction="#remVar" text="Remover selecionado" />
                                             </children>
                                         </VBox>
-                                          <ComboBox fx:id="cmbImpressora" prefWidth="220" GridPane.columnIndex="3" />
-                              <rowConstraints>
-                                 <RowConstraints />
-                                 <RowConstraints />
-                                 <RowConstraints />
-                              </rowConstraints>
+                                        <ComboBox fx:id="cmbImpressora" prefWidth="220" GridPane.columnIndex="3" />
+                                        <rowConstraints>
+                                            <RowConstraints />
+                                            <RowConstraints />
+                                            <RowConstraints />
+                                        </rowConstraints>
 
                                     </GridPane>
                                     <Separator />
@@ -588,6 +597,49 @@
                                     </font>
                                 </Button>
                             </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="blueprint_pane"
+                                    layoutX="-1" layoutY="55"
+                                    prefHeight="639" prefWidth="820"
+                                    stylesheets="@dashboard.css"
+                                    visible="false">
+
+                            <!-- título -->
+                            <Label layoutX="14" layoutY="5"
+                                   styleClass="label-bold"
+                                   text="MAPEAMENTO DO TEMPLATE">
+                                <font>
+                                    <Font name="Dubai Bold" size="18"/>
+                                </font>
+                            </Label>
+
+                            <!-- escolha do template -->
+                            <HBox alignment="CENTER_LEFT" layoutX="13" layoutY="57" spacing="10">
+                                <children>
+                                    <Label styleClass="label-bold" text="Template">
+                                        <font>
+                                            <Font name="Dubai Bold" size="15"/>
+                                        </font>
+                                    </Label>
+
+                                    <ComboBox fx:id="cb_bp_template"
+                                              prefWidth="260"
+                                              promptText="Selecione um template"/>
+                                </children>
+                            </HBox>
+
+                            <!-- grid – começa vazio; é preenchido quando um template é escolhido -->
+                            <TableView fx:id="tblBlueprint"
+                                       layoutX="13" layoutY="100"
+                                       prefHeight="510" prefWidth="794">
+                                <columns>
+                                    <TableColumn fx:id="col_bp_marcador" prefWidth="180" text="Marcador"/>
+                                    <TableColumn fx:id="col_bp_campo"    prefWidth="170" text="Campo DTO"/>
+                                    <TableColumn fx:id="col_bp_ordem"    prefWidth="100" text="Ordem"/>
+                                    <TableColumn fx:id="col_bp_ativo"    prefWidth="130" text="Ativo"/>
+                                    <TableColumn fx:id="col_bp_acao"     prefWidth="200" text="Ações"/>
+                                </columns>
+                            </TableView>
                         </AnchorPane>
                         <Separator layoutX="14.0" layoutY="49.0" prefHeight="0.0" prefWidth="794.0" />
                     </children>
